<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.awad.noor.noorshoppinglist.AddItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="60dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="5dp" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="165dp" />

            <EditText
                android:id="@+id/etUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/units"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="112dp" />

            <ImageButton
                android:id="@+id/ibtnImage"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="234dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/save"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="427dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
